BBuffer: Unregister buffer when clone_area fail, fixes #6188.

Signed-off-by: Adrien Destugues <pulkomandy@gmail.com>